<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    app:cardCornerRadius="@dimen/dp_20">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/button_close_dialog"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/transparent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@drawable/ic_baseline_close_24"/>

        <TextView
            android:id="@+id/text_title_exam_info"
            android:layout_width="@dimen/fill_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:fontFamily="@font/comfortaa_bold"
            android:textAllCaps="true"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_close_dialog"
            tools:text="@string/text_title_exam_info" />

        <ImageView
            android:id="@+id/image_exam_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_exam_info_guide"
            app:layout_constraintEnd_toEndOf="@+id/text_title_exam_info"
            app:layout_constraintStart_toStartOf="@+id/text_title_exam_info"
            app:layout_constraintTop_toBottomOf="@+id/text_title_exam_info" />

        <TextView
            android:id="@+id/text_numbers_of_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/comfortaa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_exam_info"
            tools:text="@string/text_numbers_of_question_exam_info" />

        <TextView
            android:id="@+id/text_minimum_question_to_pass_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/comfortaa"
            app:layout_constraintStart_toStartOf="@id/text_numbers_of_question"
            app:layout_constraintTop_toBottomOf="@id/text_numbers_of_question"
            tools:text="@string/text_minimum_question_to_pass_exam_info" />

        <TextView
            android:id="@+id/text_exam_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/comfortaa"
            android:text="@string/text_exam_info_duration"
            app:layout_constraintStart_toStartOf="@id/text_minimum_question_to_pass_exam"

            app:layout_constraintTop_toBottomOf="@id/text_minimum_question_to_pass_exam" />

        <TextView
            android:id="@+id/text_exam_info_guide"
            android:layout_width="@dimen/fill_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:fontFamily="@font/comfortaa"
            android:text="@string/text_exam_info_guide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_exam_duration"
            app:layout_constraintTop_toBottomOf="@id/text_exam_duration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>