<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginEnd="@dimen/dp_10"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_exam_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <ImageView
            android:id="@+id/image_test"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:src="@drawable/ic_exam"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_exam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/text_exam_title"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@id/text_description"
            app:layout_constraintStart_toEndOf="@+id/image_test"
            app:layout_constraintTop_toTopOf="@id/image_test" />

        <TextView
            android:id="@+id/text_exam_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:textStyle="bold"
            tools:text="ĐANG THI"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_exam_title"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/text_exam_description"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/image_test"
            app:layout_constraintStart_toStartOf="@+id/text_exam_title"
            app:layout_constraintTop_toBottomOf="@+id/text_exam_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_do_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/bg_corner_5dp_blue_highlight_background"
            android:fontFamily="@font/comfortaa_light"
            android:minHeight="@dimen/dp_0"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/text_button_do_exam"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_watch_exam_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_watch_exam_history" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_watch_exam_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/bg_corner_5dp_blue_highlight_background"
            android:fontFamily="@font/comfortaa_light"
            android:minHeight="@dimen/dp_0"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/text_watch_exam_history"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_do_exam"
            app:layout_constraintTop_toBottomOf="@id/image_test" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
