<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".app.ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:theme="@style/Theme.MotobikeDriverLicenseApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MotobikeDriverLicenseApp.PopupOverlay">

            <Button
                android:id="@+id/button_finish_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:text="@string/button_finish_exam_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_reset_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:text="@string/button_reset"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_reset_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:text="@string/reset_exam"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_reset_wrong_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:text="@string/button_reset"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_info_exam_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_info_24"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
